adding improvements to allow local preprocessing, training and evaluating

--- a/notebooks/sam_flightaware_api.ipynb
+++ b/notebooks/sam_flightaware_api.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 313,
+   "execution_count": 5,
    "id": "3a09c240-f96d-457f-8502-62357cc398b2",
    "metadata": {},
    "outputs": [],
@@ -445,8 +445,109 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "e7fb7a3f-8ffa-4b88-9cdc-7141cb265345",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>FlightDate</th>\n",
+       "      <th>Year</th>\n",
+       "      <th>Quarter</th>\n",
+       "      <th>Month</th>\n",
+       "      <th>DayofMonth</th>\n",
+       "      <th>DayOfWeek</th>\n",
+       "      <th>Marketing_Airline_Network</th>\n",
+       "      <th>Origin</th>\n",
+       "      <th>Dest</th>\n",
+       "      <th>CRSDepTime</th>\n",
+       "      <th>CRSArrTime</th>\n",
+       "      <th>Distance</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2022-12-06</td>\n",
+       "      <td>2022</td>\n",
+       "      <td>4</td>\n",
+       "      <td>12</td>\n",
+       "      <td>6</td>\n",
+       "      <td>2</td>\n",
+       "      <td>YX</td>\n",
+       "      <td>EWR</td>\n",
+       "      <td>PHL</td>\n",
+       "      <td>817</td>\n",
+       "      <td>917</td>\n",
+       "      <td>80</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   FlightDate  Year  Quarter  Month  ...  Dest  CRSDepTime CRSArrTime Distance\n",
+       "0  2022-12-06  2022        4     12  ...   PHL         817        917       80\n",
+       "\n",
+       "[1 rows x 12 columns]"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from delai.api.flightaware import get_processed_flight_details\n",
+    "\n",
+    "df = get_processed_flight_details()\n",
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "453125c4",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(1, 12)"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "91c167d8",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -454,7 +555,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3.8.12 64-bit ('shims')",
    "language": "python",
    "name": "python3"
   },
@@ -469,6 +570,11 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.8.12"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "135199c82697646d31fc87055e8c8044df91c5e93a634aef523137dc7a98a22f"
+   }
   }
  },
  "nbformat": 4,
